Added a few descriptors

--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
             <div class="gem-cell col-md-3">
                 <div class="gem-cell-content">
                     <input type="checkbox" class="item-complete">
-                    <span><a target="_blank" href="http://pathofexile.gamepedia.com/{{name}}">{{name}}</a></span> <br>
-                    {{#if required_lvl}}<span>Lvl: <b>{{required_lvl}}</b></span> <br>{{/if}}
+                    <span>Skill: <a target="_blank" href="http://pathofexile.gamepedia.com/{{name}}">{{name}}</a></span> <br>
+                    {{#if required_lvl}}<span>Required level: <b>{{required_lvl}}</b></span> <br>{{/if}}
                     {{#if act}}<span>Act: <b>{{act}}</b></span> <br>{{/if}}
-                    {{#if town}}<span><a target="_blank" href="http://pathofexile.gamepedia.com/{{town}}">{{town}}</a></span> <br>{{/if}}
-                    {{#if quest_name}}<span><a target="_blank" href="http://pathofexile.gamepedia.com/{{quest_name}}">{{quest_name}}</a></span> <br>{{/if}}
-                    {{#if npc}}<span><a target="_blank" href="http://pathofexile.gamepedia.com/{{npc}}">{{npc}}</a></span> <br>{{/if}}
+                    {{#if town}}<span>Location: <a target="_blank" href="http://pathofexile.gamepedia.com/{{town}}">{{town}}</a></span> <br>{{/if}}
+                    {{#if quest_name}}<span>Quest: <a target="_blank" href="http://pathofexile.gamepedia.com/{{quest_name}}">{{quest_name}}</a></span> <br>{{/if}}
+                    {{#if npc}}<span>NPC: <a target="_blank" href="http://pathofexile.gamepedia.com/{{npc}}">{{npc}}</a></span> <br>{{/if}}
                 </div>
             </div>
         </script>
