Track remaining text left over

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             </section>
             
         </main>
+        <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
         <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
         <script src="//cdn.jsdelivr.net/handlebarsjs/4.0.5/handlebars.min.js"></script>
         <script src="js/hashids.min.js"></script>
