--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <title>Path of Gems</title>
         
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+        <link rel="stylesheet" href="http://qtip2.com/v/2.2.1/basic/jquery.qtip.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
 
@@ -14,12 +15,12 @@
     <body>
         <main class="container">
             <section class="row main-form-container">
-                <div class="well col-md-12">
+                <div class="well col-xs-12">
                     <form class="gem-guide-form form-horizontal" data-toggle="validator">
                         <fieldset>                            
                             <div class="form-group">
-                                <label for="class-selection-name" class="col-lg-2 control-label">Your class</label>
-                                <div class="col-lg-10">
+                                <label for="class-selection-name" class="col-xs-2 control-label">Your class<a href="#class-selection" id="class-selection-qtip" class="hidden-xs" title="Choose your build's class"><i class="fa fa-question-circle-o" aria-hidden="true"></i></a></label>
+                                <div class="col-xs-10">
                                     <select class="class-selection form-control " name="class-selection-name" required>
                                         <option value="" disabled selected>Select your class</option>
                                         <option value="marauder">Marauder</option>
@@ -34,20 +35,20 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="gem-guide-text-name" class="col-lg-2 control-label">Gem build text</label>
-                                <div class="col-lg-10">
+                                <label for="gem-guide-text-name" class="col-xs-2 control-label">Gem build text<a href="#gem-guide-text" id="gem-guide-text-qtip" class="hidden-xs" title="Paste your build's gem section"><i class="fa fa-question-circle-o" aria-hidden="true"></i></a></label>
+                                <div class="col-xs-10">
                                     <input autocomplete="off" type="text" placeholder='Paste the "Gems" section of your guide here …' id="guideGems" class="form-control gem-guide-text" name="gem-guide-text-name" required>
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
                             <div class="form-group build-gem-link-container hide">
-                                <label for="gem-guide-text-name" class="col-lg-2 control-label">Your Gem build</label>
-                                <div class="col-lg-10">
+                                <label for="gem-guide-text-name" class="col-xs-2 control-label">Your Gem build</label>
+                                <div class="col-xs-10">
                                     <p class="buildGemLink"></p>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="col-lg-10 col-lg-offset-2">
+                                <div class="col-xs-10 col-xs-offset-2">
                                     <button type="reset" class="btn btn-default clear-form-input">Clear</button>
                                     <button type="submit" class="btn btn-primary">Process</button>
                                 </div>
@@ -103,7 +104,7 @@
         <div class="footer">
             <div class="container">
                 <span class="commit-text text-muted">Latest update: <span class="time-updated"></span>.&nbsp;&nbsp;<a target="_blank" href="#">Commit</a></span>
-                <span class="modal-link"><a href="#commentModal" class="comment-modal" data-toggle="modal" data-target="#commentModal">Questions, comments, feature requests?</a></span>
+                <span class="modal-link"><a href="#commentModal" class="comment-modal" data-toggle="modal" data-target="#commentModal">Questions, comments, feature requests?</a> | <a target="_blank" href="https://chrome.google.com/webstore/detail/path-of-exile-abbreviatio/jlngbjaopajblhgonifalnpfbnhcnncl?hl=en">Check out my abbreviations helper!</a></span>
             </div>
         </div>
 
@@ -144,6 +145,7 @@
         <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
         <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
         <script src="//cdn.jsdelivr.net/handlebarsjs/4.0.5/handlebars.min.js"></script>
+        <script src="http://qtip2.com/v/2.2.1/jquery.qtip.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script src="js/hashids.min.js"></script>
         <script src="js/underscore-min.js"></script>
@@ -208,6 +210,11 @@
                 </div>
                 {{/rows}}
             </div>
+        </script>
+
+        <script id="qtip-content" type="text/x-handlebars-template">
+            <p>In this section paste the section of your guide that explains which gems are required (or type your own!). For example: </p>
+            <img width="600" src="https://camo.githubusercontent.com/4e2a688e1fbf2b3f4b666dc01b4872000f5fe8c2/687474703a2f2f692e696d6775722e636f6d2f5a5177765544522e706e67" alt="">
         </script>
     </body>
 </html>
